03/30/25 ninotattoo update - 2 buttons linked to google form - footer has been updated - added a new row for portfolio, and updated the texts (but still needed the address and phone number of the site owner) - Google map has been fixed (Map not showing).

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -241,6 +241,20 @@ hr.small {
 
 footer {
     padding: 100px 0;
+    padding-bottom: 0px;
+}
+
+.footer-2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    margin-top: 60px;
+}
+
+.footer-2 a {
+    color: #fff;
+    font-weight: bold;
 }
 
 /* Custom CSS */
